--- a/traffic_analysis.ipynb
+++ b/traffic_analysis.ipynb
@@ -47368,9 +47368,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "al",
+      "display_name": "Air Liquide",
       "language": "python",
-      "name": "python3"
+      "name": "al"
     },
     "language_info": {
       "codemirror_mode": {
